Update example Caddyfile

--- a/config/caddy/Caddyfile
+++ b/config/caddy/Caddyfile
@@ -1,8 +1,9 @@
 # web socket (metadata) server
+# https://example.com:7905 {
 https://*:7905 {
 	gzip
 	tls self_signed
-	# tls {
+	# tls email@example.com {
 	#	dns cloudflare
 	# }
 	log / stdout "[{when_iso}] [{remote} - {host}] [{method} {proto} {status}] {uri}"
@@ -12,10 +13,11 @@ https://*:7905 {
 }
 
 # audio (file) server
+# https://example.com:7906 {
 https://*:7906 {
 	gzip
 	tls self_signed
-	# tls {
+	# tls email@example.com {
 	#	dns cloudflare
 	# }
 	log / stdout "[{when_iso}] [{remote} - {host}] [{method} {proto} {status}] {uri}"
