Enable 256 color client

--- a/config/musikcube/settings.json
+++ b/config/musikcube/settings.json
@@ -1,5 +1,7 @@
 {
   "AutoUpdateCheck": false,
+  "DisableCustomColors": false,
   "FirstRunSettingsDisplayed": true,
-  "SyncOnStartup": true
+  "SyncOnStartup": true,
+  "UsePaletteColors": false
 }
