--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,9 +16,9 @@ build:native-image:
   stage: build:images
   before_script:
     - docker info
-    - apk add --no-cache coreutils m4 make
+    - apk add --no-cache coreutils git m4 make
   script:
-    - make IMAGE_VERSION="${CI_COMMIT_REF_SLUG}" build-native-image save-native-image
+    - make build-native-image save-native-image
   except:
     - tags
   artifacts:
@@ -30,10 +30,10 @@ build:amd64-image:
   stage: build:images
   before_script:
     - docker info
-    - apk add --no-cache coreutils m4 make
+    - apk add --no-cache coreutils git m4 make
     - make binfmt-register
   script:
-    - make IMAGE_VERSION="${CI_COMMIT_REF_SLUG}" build-amd64-image save-amd64-image
+    - make build-amd64-image save-amd64-image
   only:
     - /^v([0-9.]+)(-.+)?$/
   except:
@@ -47,10 +47,10 @@ build:arm32v7-image:
   stage: build:images
   before_script:
     - docker info
-    - apk add --no-cache coreutils m4 make
+    - apk add --no-cache coreutils git m4 make
     - make binfmt-register
   script:
-    - make IMAGE_VERSION="${CI_COMMIT_REF_SLUG}" build-arm32v7-image save-arm32v7-image
+    - make build-arm32v7-image save-arm32v7-image
   only:
     - /^v([0-9.]+)(-.+)?$/
   except:
@@ -64,10 +64,10 @@ build:arm64v8-image:
   stage: build:images
   before_script:
     - docker info
-    - apk add --no-cache coreutils m4 make
+    - apk add --no-cache coreutils git m4 make
     - make binfmt-register
   script:
-    - make IMAGE_VERSION="${CI_COMMIT_REF_SLUG}" build-arm64v8-image save-arm64v8-image
+    - make build-arm64v8-image save-arm64v8-image
   only:
     - /^v([0-9.]+)(-.+)?$/
   except:
@@ -80,10 +80,10 @@ build:arm64v8-image:
 push:amd64-image:
   stage: push:images
   before_script:
-    - apk add --no-cache coreutils make
+    - apk add --no-cache coreutils git make
     - docker login -u "${CI_DEPLOY_USER}" -p "${CI_DEPLOY_PASSWORD}" "${CI_REGISTRY}" >/dev/null 2>&1
   script:
-    - make IMAGE_VERSION="${CI_COMMIT_REF_SLUG}" load-amd64-image push-amd64-image
+    - make load-amd64-image push-amd64-image
   only:
     - /^v([0-9.]+)(-.+)?$/
   except:
@@ -94,10 +94,10 @@ push:amd64-image:
 push:arm32v7-image:
   stage: push:images
   before_script:
-    - apk add --no-cache coreutils make
+    - apk add --no-cache coreutils git make
     - docker login -u "${CI_DEPLOY_USER}" -p "${CI_DEPLOY_PASSWORD}" "${CI_REGISTRY}" >/dev/null 2>&1
   script:
-    - make IMAGE_VERSION="${CI_COMMIT_REF_SLUG}" load-arm32v7-image push-arm32v7-image
+    - make load-arm32v7-image push-arm32v7-image
   only:
     - /^v([0-9.]+)(-.+)?$/
   except:
@@ -108,10 +108,10 @@ push:arm32v7-image:
 push:arm64v8-image:
   stage: push:images
   before_script:
-    - apk add --no-cache coreutils make
+    - apk add --no-cache coreutils git make
     - docker login -u "${CI_DEPLOY_USER}" -p "${CI_DEPLOY_PASSWORD}" "${CI_REGISTRY}" >/dev/null 2>&1
   script:
-    - make IMAGE_VERSION="${CI_COMMIT_REF_SLUG}" load-arm64v8-image push-arm64v8-image
+    - make load-arm64v8-image push-arm64v8-image
   only:
     - /^v([0-9.]+)(-.+)?$/
   except:
@@ -122,11 +122,11 @@ push:arm64v8-image:
 push:cross-manifest:
   stage: push:manifests
   before_script:
-    - apk add --no-cache coreutils make
+    - apk add --no-cache coreutils git make
     - "mkdir -p ~/.docker/ && printf '%s\n' '{\"experimental\": \"enabled\"}' > ~/.docker/config.json"
     - docker login -u "${CI_DEPLOY_USER}" -p "${CI_DEPLOY_PASSWORD}" "${CI_REGISTRY}" >/dev/null 2>&1
   script:
-    - make IMAGE_VERSION="${CI_COMMIT_REF_SLUG}" push-cross-manifest
+    - make push-cross-manifest
   only:
     - /^v([0-9.]+)(-.+)?$/
   except:
