--- a/config/caddy/Caddyfile
+++ b/config/caddy/Caddyfile
@@ -1,7 +1,7 @@
 # WebSocket server (metadata)
 # https://example.com:7905 {
-https://*:7905 {
-	tls self_signed
+http://*:7905 {
+	tls off
 	# tls email@example.com {
 	#	dns cloudflare
 	# }
@@ -13,8 +13,8 @@ https://*:7905 {
 
 # HTTP server (audio)
 # https://example.com:7906 {
-https://*:7906 {
-	tls self_signed
+http://*:7906 {
+	tls off
 	# tls email@example.com {
 	#	dns cloudflare
 	# }
